--- a/wizardmaker.html
+++ b/wizardmaker.html
@@ -719,156 +719,230 @@ document.getElementById('addPageBtnSidebar').onclick=()=>{
 // Initial render
 renderLibraryAssets();
 </script>
-      <script>
-/* =========================
-   Wizard Maker – Part 1 (Themes)
-   =========================
-   - 40 curated themes (with text + bg + card + button colors)
-   - Works on any uploaded ZIP site
-   - Universal CSS injection: updates existing CSS if available, else injects in HTML
-   - No lag / duplication
-*/
-
-// ----------------- Theme Data -----------------
-const themes = [
-  {name:'Oceanic', primary:'#0b79ff', accent:'#06b6d4', bg:'#f6fbff', text:'#111111'},
-  {name:'Midnight', primary:'#7c3aed', accent:'#06b6d4', bg:'#071026', text:'#f8f9fa'},
-  {name:'Sunset', primary:'#ff6b6b', accent:'#ff9a00', bg:'#fff7f2', text:'#111111'},
-  {name:'Forest', primary:'#0b8457', accent:'#34d399', bg:'#f3fbf6', text:'#111111'},
-  {name:'Corporate', primary:'#0b3d91', accent:'#06b6d4', bg:'#fbfdff', text:'#111111'},
-  {name:'Warm', primary:'#d97706', accent:'#fb923c', bg:'#fffaf0', text:'#111111'},
-  {name:'Violet', primary:'#6b21a8', accent:'#8b5cf6', bg:'#fbf7ff', text:'#111111'},
-  {name:'Candy', primary:'#ff6bcb', accent:'#ffd166', bg:'#fff7fb', text:'#111111'},
-  {name:'Grayscale', primary:'#111827', accent:'#6b7280', bg:'#ffffff', text:'#111111'},
-  {name:'Aqua', primary:'#0088cc', accent:'#00c2c7', bg:'#f0fcff', text:'#111111'},
-  {name:'Rose', primary:'#e11d48', accent:'#fb7185', bg:'#fff5f7', text:'#111111'},
-  {name:'Indigo', primary:'#272ddf', accent:'#7c3aed', bg:'#f5f7ff', text:'#111111'},
-  {name:'Lime', primary:'#84cc16', accent:'#bef264', bg:'#fbfff0', text:'#111111'},
-  {name:'Coral', primary:'#ff7a59', accent:'#ffb199', bg:'#fff6f2', text:'#111111'},
-  {name:'Teal', primary:'#0d9488', accent:'#2dd4bf', bg:'#f2fffb', text:'#111111'},
-  {name:'Slate', primary:'#334155', accent:'#64748b', bg:'#f8fafc', text:'#111111'},
-  {name:'Marigold', primary:'#f59e0b', accent:'#fb923c', bg:'#fffaf0', text:'#111111'},
-  {name:'Cobalt', primary:'#0047ab', accent:'#60a5fa', bg:'#f4f8ff', text:'#111111'},
-  {name:'Berry', primary:'#b91c1c', accent:'#fb7185', bg:'#fff7f7', text:'#111111'},
-  {name:'Mint', primary:'#10b981', accent:'#34d399', bg:'#f2fff7', text:'#111111'},
-  {name:'Classic', primary:'#0b79ff', accent:'#ff6b6b', bg:'#ffffff', text:'#111111'},
-  {name:'Plum', primary:'#6d28d9', accent:'#a78bfa', bg:'#f9f7ff', text:'#111111'},
-  {name:'Ochre', primary:'#b45309', accent:'#f59e0b', bg:'#fff8f1', text:'#111111'},
-  {name:'Sky', primary:'#38bdf8', accent:'#0ea5e9', bg:'#f3fbff', text:'#111111'},
-  {name:'Emerald', primary:'#10b981', accent:'#059669', bg:'#f2fff6', text:'#111111'},
-  {name:'Sienna', primary:'#7c2d12', accent:'#fb923c', bg:'#fff7f2', text:'#111111'},
-  {name:'Azure', primary:'#0066ff', accent:'#00bcd4', bg:'#f4f9ff', text:'#111111'},
-  {name:'Lavender', primary:'#a78bfa', accent:'#c4b5fd', bg:'#fbf8ff', text:'#111111'},
-  {name:'Copper', primary:'#9a3412', accent:'#fb923c', bg:'#fff6f0', text:'#111111'},
-  {name:'Monochrome', primary:'#111827', accent:'#374151', bg:'#ffffff', text:'#111111'},
-
-  // --- New Unique Themes ---
-  {name:'Cyberpunk', primary:'#ff00ff', accent:'#00ffff', bg:'#0d0221', text:'#f8f9fa'},
-  {name:'Desert', primary:'#c19a6b', accent:'#f4a261', bg:'#fff8f0', text:'#111111'},
-  {name:'Neon Jungle', primary:'#39ff14', accent:'#ff073a', bg:'#000000', text:'#ffffff'},
-  {name:'Royal Gold', primary:'#d4af37', accent:'#1a1a1a', bg:'#fffdf5', text:'#111111'},
-  {name:'Ocean Depths', primary:'#013a63', accent:'#00b4d8', bg:'#f0faff', text:'#ffffff'},
-  {name:'Pastel Dream', primary:'#ffafcc', accent:'#bde0fe', bg:'#fbfaff', text:'#111111'},
-  {name:'Charcoal', primary:'#2d2d2d', accent:'#ff6b35', bg:'#f5f5f5', text:'#111111'},
-  {name:'Electric Blue', primary:'#0077ff', accent:'#00eaff', bg:'#f2fbff', text:'#111111'},
-  {name:'Crimson Dawn', primary:'#dc2626', accent:'#f87171', bg:'#fff6f6', text:'#111111'},
-  {name:'Galaxy', primary:'#4f46e5', accent:'#9333ea', bg:'#0f172a', text:'#e5e7eb'}
-];
-
-// ----------------- UI: Floating Theme Panel -----------------
-const themeBtn = document.createElement('div');
-themeBtn.innerHTML = '🎨';
-Object.assign(themeBtn.style, {
-  position:'fixed', bottom:'70px', right:'20px',
-  width:'44px', height:'44px', borderRadius:'50%',
-  background:'#000', color:'#fff', fontSize:'22px',
-  display:'flex', alignItems:'center', justifyContent:'center',
-  cursor:'pointer', zIndex:9999
-});
-document.body.appendChild(themeBtn);
-
-const themePanel = document.createElement('div');
-Object.assign(themePanel.style, {
-  position:'fixed', bottom:'120px', right:'20px',
-  width:'320px', maxHeight:'70vh', overflowY:'auto',
-  background:'#fff', border:'1px solid #ddd',
-  borderRadius:'12px', boxShadow:'0 4px 20px rgba(0,0,0,0.15)',
-  padding:'12px', display:'none', zIndex:9999
-});
-document.body.appendChild(themePanel);
-
-themes.forEach(t=>{
-  const item=document.createElement('div');
-  item.style.cursor='pointer';
-  item.style.display='flex'; item.style.alignItems='center'; item.style.marginBottom='6px';
-  item.innerHTML=`<div style="width:28px;height:28px;border-radius:6px;background:linear-gradient(45deg,${t.primary},${t.accent});margin-right:8px"></div>
-                  <div style="flex:1"><strong>${t.name}</strong></div>`;
-  item.onclick=()=> applyTheme(t);
-  themePanel.appendChild(item);
-});
-themeBtn.onclick=()=> themePanel.style.display=themePanel.style.display==='none'?'block':'none';
-
-// ----------------- Apply Theme -----------------
-let currentThemeCss = '';
-
-function applyTheme(t){
-  const css = `
-/* === Wizard Maker Theme: ${t.name} === */
-body { background:${t.bg} !important; color:${t.text} !important; }
-header, .header, nav, .nav, .navbar, .site-header { background:${t.primary} !important; color:${t.text} !important; }
-footer, .footer, .site-footer { background:${t.accent} !important; color:${t.text} !important; }
-.hero, .banner, .masthead, .jumbotron { background:${t.bg} !important; color:${t.text} !important; }
-.card, .panel, .tile, .box, .content-card, .card-body { background:${t.bg} !important; color:${t.text} !important; border:1px solid ${t.accent} !important; }
-button, .btn, .button, input[type=submit], .cta, .action-btn { background:${t.primary} !important; color:#fff !important; border-radius:6px !important; }
-a, .link, .nav-link { color:${t.accent} !important; }
-h1,h2,h3,h4,h5,h6,strong { color:${t.text} !important; }
-`;
-
-  currentThemeCss = css;
-  injectPreviewCss(css);
-  saveThemeToZip(css);
+      <!-- ========== Theme Module (Improved Part 1 with Element Editing & Safe Text) ========== -->
+<style>
+#themePanel {
+  position: fixed;
+  bottom: 70px;
+  right: 20px;
+  width: 320px;
+  background: #fff;
+  border-radius: 12px;
+  padding: 12px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+  z-index: 9999;
+  display: none;
 }
+#themePanel h3 { margin:0 0 10px 0; font-size:16px; }
+#themePanel .preset-grid { 
+  display:grid; grid-template-columns:repeat(3,1fr); gap:8px; 
+  max-height:200px; overflow:auto;
+}
+#themePanel .preset-tile { 
+  border:1px solid #eee; padding:8px; border-radius:8px; cursor:pointer;
+  text-align:center; font-size:12px; background:#fafafa;
+}
+#themePanel .preset-tile:hover { background:#f0f0f0; }
+#themeToggleBtn {
+  position: fixed; bottom: 80px; right: 20px; /* leaves 60px space below */
+  background:#000; color:#fff; border-radius:50%; width:46px; height:46px;
+  display:flex; align-items:center; justify-content:center;
+  font-size:20px; cursor:pointer; z-index:10000;
+}
+/* element color editor (floating for individual edits) */
+#elementEditor {
+  position: fixed;
+  bottom: 140px; right: 20px;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+  padding: 10px;
+  display: none;
+  z-index: 10001;
+}
+#elementEditor input[type=color] { width: 40px; height: 28px; border: none; cursor: pointer; }
+#elementEditor label { font-size: 13px; margin-right: 6px; }
+</style>
 
-// ----------------- Live Preview -----------------
-function injectPreviewCss(css){
-  let styleEl=document.getElementById('__wizard_theme');
-  if(!styleEl){
-    styleEl=document.createElement('style');
-    styleEl.id='__wizard_theme';
-    document.head.appendChild(styleEl);
+<div id="themePanel">
+  <h3>🎨 Themes</h3>
+  <div class="preset-grid" id="themeGrid"></div>
+  <div style="margin-top:10px; display:flex; gap:6px;">
+    <input type="color" id="primaryColor" value="#0b79ff">
+    <input type="color" id="accentColor" value="#06b6d4">
+    <input type="color" id="bgColor" value="#ffffff">
+    <button id="applyCustomTheme">Apply</button>
+  </div>
+</div>
+<div id="themeToggleBtn">🎨</div>
+
+<!-- element editor -->
+<div id="elementEditor">
+  <div style="margin-bottom:6px;font-weight:600;">Element Editor</div>
+  <div><label>BG</label><input type="color" id="elBg"></div>
+  <div><label>Text</label><input type="color" id="elColor"></div>
+  <button id="applyElementChange" style="margin-top:6px;">Apply</button>
+</div>
+
+<script>
+(function(){
+  // ----------------- Themes -----------------
+  const themePresets = [
+    {name:'Oceanic', primary:'#0b79ff', accent:'#06b6d4', bg:'#f6fbff'},
+    {name:'Midnight', primary:'#7c3aed', accent:'#06b6d4', bg:'#071026'},
+    {name:'Sunset', primary:'#ff6b6b', accent:'#ff9a00', bg:'#fff7f2'},
+    {name:'Forest', primary:'#0b8457', accent:'#34d399', bg:'#f3fbf6'},
+    {name:'Corporate', primary:'#0b3d91', accent:'#06b6d4', bg:'#fbfdff'},
+    {name:'Warm', primary:'#d97706', accent:'#fb923c', bg:'#fffaf0'},
+    {name:'Violet', primary:'#6b21a8', accent:'#8b5cf6', bg:'#fbf7ff'},
+    {name:'Candy', primary:'#ff6bcb', accent:'#ffd166', bg:'#fff7fb'},
+    {name:'Grayscale', primary:'#111827', accent:'#6b7280', bg:'#ffffff'},
+    {name:'Aqua', primary:'#0088cc', accent:'#00c2c7', bg:'#f0fcff'},
+    {name:'Rose', primary:'#e11d48', accent:'#fb7185', bg:'#fff5f7'},
+    {name:'Indigo', primary:'#272ddf', accent:'#7c3aed', bg:'#f5f7ff'},
+    {name:'Lime', primary:'#84cc16', accent:'#bef264', bg:'#fbfff0'},
+    {name:'Coral', primary:'#ff7a59', accent:'#ffb199', bg:'#fff6f2'},
+    {name:'Teal', primary:'#0d9488', accent:'#2dd4bf', bg:'#f2fffb'},
+    {name:'Slate', primary:'#334155', accent:'#64748b', bg:'#f8fafc'},
+    {name:'Classic', primary:'#0b79ff', accent:'#ff6b6b', bg:'#ffffff'},
+    {name:'Lavender', primary:'#a78bfa', accent:'#c4b5fd', bg:'#fbf8ff'},
+    {name:'Copper', primary:'#9a3412', accent:'#fb923c', bg:'#fff6f0'}
+  ];
+
+  const themeGrid = document.getElementById("themeGrid");
+  themePresets.forEach(t=>{
+    const tile=document.createElement("div");
+    tile.className="preset-tile";
+    tile.style.background=`linear-gradient(90deg,${t.primary},${t.accent})`;
+    tile.innerHTML=`<div>${t.name}</div>`;
+    tile.addEventListener("click",()=>applyTheme(t));
+    themeGrid.appendChild(tile);
+  });
+
+  // ----------------- Apply Theme -----------------
+  function applyTheme(theme){
+    const iframe = iframeRefs[activePage];
+    if(!iframe) return alert("No active page loaded.");
+    const doc = iframe.contentDocument || iframe.contentWindow.document;
+
+    const css = `
+      body { background:${theme.bg}; color:${safeText(theme.bg)}; }
+      h1,h2,h3,h4,h5,h6,p,span,li { color:${safeText(theme.bg)}; }
+      a { color:${theme.primary}; }
+      header, .header, nav, .nav, .navbar { background:${theme.primary}; color:${safeText(theme.primary)}; }
+      footer, .footer { background:${theme.accent}; color:${safeText(theme.accent)}; }
+      button, .btn, .button, input[type="submit"] {
+        background:${theme.primary}; color:${safeText(theme.primary)};
+        border-radius:6px; padding:8px 14px;
+      }
+      .card, .panel, .tile, .box { background:#fff; border:1px solid ${theme.primary}44; color:#111; border-radius:12px; }
+      input, select, textarea {
+        border:1px solid ${theme.primary}88; border-radius:6px; padding:6px;
+      }
+      input:focus, select:focus, textarea:focus {
+        outline:2px solid ${theme.accent};
+      }
+      .section, .container, .hero, .banner {
+        background: linear-gradient(180deg, ${theme.bg}, ${theme.bg}cc);
+      }
+    `;
+
+    injectThemeCss(doc, css);
+    saveThemeToEditedContents(css);
   }
-  styleEl.textContent=css;
-}
 
-// ----------------- Save into ZIP -----------------
-async function saveThemeToZip(css){
-  if(!window.wizardZip) return;
-  let updated=false;
+  function injectThemeCss(doc, css){
+    let styleTag = doc.getElementById("__wizard_theme");
+    if(!styleTag){
+      styleTag = doc.createElement("style");
+      styleTag.id="__wizard_theme";
+      doc.head.appendChild(styleTag);
+    }
+    styleTag.innerHTML = css;
+  }
 
-  for(const name of Object.keys(window.wizardZip.files)){
-    if(name.toLowerCase().endsWith('.css')){
-      let orig=await window.wizardZip.files[name].async('string');
-      let cleaned=orig.replace(/\/\* === Wizard Maker Theme:[\s\S]*?=== \*\//g,'');
-      let newCss=cleaned+'\n'+css;
-      window.wizardZip.file(name,newCss);
-      updated=true;
-      break; // write only to first css file
+  function saveThemeToEditedContents(css){
+    let html = editedContents[activePage];
+    if(html){
+      if(html.includes("__wizard_theme")){
+        html = html.replace(/<style id="__wizard_theme">([\s\S]*?)<\/style>/,
+                            `<style id="__wizard_theme">${css}</style>`);
+      } else {
+        html = html.replace(/<\/head>/i, `<style id="__wizard_theme">${css}</style></head>`);
+      }
+      editedContents[activePage] = html;
     }
   }
 
-  if(!updated){
-    for(const name of Object.keys(window.wizardZip.files)){
-      if(name.toLowerCase().endsWith('.html')){
-        let orig=await window.wizardZip.files[name].async('string');
-        if(orig.includes('</head>')){
-          let injected=orig.replace('</head>', `<style id="__wizard_theme">${css}</style></head>`);
-          window.wizardZip.file(name,injected);
+  // ----------------- Helpers -----------------
+  function hexToRgb(hex){
+    hex = hex.replace("#","");
+    if(hex.length===3) hex=hex.split("").map(c=>c+c).join("");
+    const num = parseInt(hex,16);
+    return {r:(num>>16)&255, g:(num>>8)&255, b:num&255};
+  }
+  function luminance(hex){
+    const c=hexToRgb(hex);
+    const a=[c.r/255,c.g/255,c.b/255].map(v=>v<=0.03928?v/12.92:Math.pow((v+0.055)/1.055,2.4));
+    return 0.2126*a[0]+0.7152*a[1]+0.0722*a[2];
+  }
+  function safeText(bg){
+    const L=luminance(bg);
+    return L>0.55 ? "#000" : "#fff";
+  }
+
+  // ----------------- Toggle -----------------
+  document.getElementById("themeToggleBtn").onclick=()=>{
+    const panel=document.getElementById("themePanel");
+    panel.style.display=panel.style.display==="none"?"block":"none";
+  };
+  document.getElementById("applyCustomTheme").onclick=()=>{
+    const t={name:"Custom", primary:primaryColor.value, accent:accentColor.value, bg:bgColor.value};
+    applyTheme(t);
+  };
+
+  // ----------------- Element Editor -----------------
+  let selectedEl = null;
+  const elEditor = document.getElementById("elementEditor");
+  const elBg = document.getElementById("elBg");
+  const elColor = document.getElementById("elColor");
+  const applyElBtn = document.getElementById("applyElementChange");
+
+  // click inside preview to pick element
+  window.addEventListener("message",(e)=>{
+    if(e.data && e.data.type==="ELEMENT_CLICK"){
+      const {selector, bg, color} = e.data;
+      selectedEl = selector;
+      elBg.value = bg || "#ffffff";
+      elColor.value = color || "#000000";
+      elEditor.style.display="block";
+    }
+  });
+
+  applyElBtn.onclick=()=>{
+    if(!selectedEl) return;
+    const iframe = iframeRefs[activePage];
+    if(!iframe) return;
+    const doc = iframe.contentDocument;
+    const el = doc.querySelector(selectedEl);
+    if(el){
+      el.style.backgroundColor = elBg.value;
+      el.style.color = elColor.value;
+      // save into html string
+      let html = editedContents[activePage];
+      if(html){
+        const reg = new RegExp(`(<[^>]*${selectedEl}[^>]*style=")([^"]*)(")`);
+        if(reg.test(html)){
+          html = html.replace(reg, `$1$2;background:${elBg.value};color:${elColor.value}$3`);
         }
+        editedContents[activePage] = html;
       }
     }
-  }
-}
+    elEditor.style.display="none";
+  };
+})();
 </script>
+<!-- ========== /Theme Module ========== -->
 
 
 </body>
